--- a/events/templates/home_page/home_page.html
+++ b/events/templates/home_page/home_page.html
@@ -166,14 +166,18 @@
             {% if message %}
             <p class="text-red-500">Event Not Found.Search with Name and Location</p>{% endif %}
             {% for event in events %}
-        <div class="bg-[#E0E7FF] hover:bg-indigo-200 rounded-lg shadow-lg overflow-hidden w-80 transform transition duration-500 hover:scale-105 hover:shadow-2xl">
-        <img src={{event.asset.url}} alt="Event 1" class="w-full h-48 object-cover">
-        <div class="p-4">
-            <h3 class="text-xl font-bold text-gray-800">{{event.name}}</h3>
-            <h4 class="text-md text-gray-600">{{event.description}}</h4>
-            <p class="text-gray-600 font-semibold flex items-center mt-2">
-                <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
-                    <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2C8.134 2 5 5.134 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.866-3.134-7-7-7zM12 11a2 2 0 110-4 2 2 0 010 4z"></path>
+            <div class="bg-[#E0E7FF] hover:bg-indigo-200 rounded-lg shadow-lg overflow-hidden w-80 transform transition duration-500 hover:scale-105 hover:shadow-2xl">
+            {% if event.asset %}
+                <img src="{{ event.asset.url }}" alt="{{ event.name }}" class="w-full h-48 object-cover">
+            {% else %}
+                     <img src="https://media.istockphoto.com/id/1354776457/vector/default-image-icon-vector-missing-picture-page-for-website-design-or-mobile-app-no-photo.jpg?s=612x612&w=0&k=20&c=w3OW0wX3LyiFRuDHo9A32Q0IUMtD4yjXEvQlqyYk9O4=" alt="{{ event.name }}" class="w-full h-48 object-cover"> 
+            {% endif %}
+            <div class="p-4">
+                <h3 class="text-xl font-bold text-gray-800">{{event.name}}</h3>
+                <h4 class="text-md text-gray-600">{{event.description}}</h4>
+                <p class="text-gray-600 font-semibold flex items-center mt-2">
+                    <svg class="w-5 h-5 mr-2" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg">
+                        <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 2C8.134 2 5 5.134 5 9c0 5.25 7 13 7 13s7-7.75 7-13c0-3.866-3.134-7-7-7zM12 11a2 2 0 110-4 2 2 0 010 4z"></path>
                 </svg>
                 {{event.location}}
             </p>
